added a dynamic title to frontend

--- a/frontend/katsoresepti.html
+++ b/frontend/katsoresepti.html
@@ -28,6 +28,7 @@
 
 
         function tulostaResepti(resepti){
+            document.title = resepti.nimi;
             nimi = document.createElement("h1")
             nimiTeksti = document.createTextNode(resepti.nimi);
             nimi.appendChild(nimiTeksti);
